[package]
name = "sandbox-rs"
version = "0.1.0"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.1.0"
anyhow = "1"
tailcall = "0.1.5"
toml = "0.5"
tokio = { version = "1.11.0", features = ["full"] }
# mini-redis = "0.4"